2003-11-14  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* ObjScanner.pm: v2.5: replaced obsolete WeakRef module by
	Scalar::Util
	Note that pseudo-hashes are deprecated. 

2003-03-21  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* ObjScanner.pm v 2.4 (analyse_element): 
	- recognize weak references

2003-02-28  Dominique Dumont v2.3  <domi@komarr.grenoble.hp.com>

	* ObjScanner.pm (scan_object): 
	- added autonomous scan popup widget

2003-01-31  Dominique Dumont  <domi@komarr.grenoble.hp.com>

	* ObjScanner.pm v2.1 : 
	External changes:
 	- added view_pseudo parameter
	- can view intern of tied scalar, hash or array by using middle-button
	- text window is removed from scanner and is now displayed in popup
	  window.
	- can deparse code ref and display the deparsed code in popup window

	Internal changes:
	- changed internal data model. This will break classes derived from
	  ObjScanner
	- internal methods are re-organized for easier sub-classing

2001-01-17  Dominique Dumont  <domi@komarr.grenoble.hp.com> v1.022

	* ObjScanner.pm (isPseudoHash): small bug fix
	* Makefile.PL: added Tk in PREREQ_PM

2001-01-12  Dominique Dumont  <domi@komarr.grenoble.hp.com> v1.021

	* Makefile.PL: fixed Makefile.PL

	* ObjScanner.pm:
	- added pseudo hash viewer

2000-06-07  Dominique Dumont  <domi@ISPSERV.grenoble.hp.com> v1.019

	* ObjScanner.pm: 

	1: Use Adjuster so that the user can adjust the relative heights
	of the HList window and the dump window.
	2: Provide 5 options for setting colors and images
	3: Impose the same scrollbar style ('osoe') to HList and ROText.
	4: Set -wideselection 0 for HList.
	5: add 'open folder' image and display it when item has displayed
	   children

2000-04-17  Dominique Dumont  <domi@ispserv.grenoble.hp.com> v1.018

	* ObjScanner.pm: 
	- fixed a bug related to root display
	- added a patch provided by Rudi Farkas to display a watch cursor
	  when displaying a sub-object
